Don't fix the height of the library div. Should allow for more natural spacing.

--- a/statusboard/static/statusboard.css
+++ b/statusboard/static/statusboard.css
@@ -5,6 +5,12 @@ body {
   margin: 0;
 }
 
+hr.divider {
+  margin: 0;
+  border: 0;
+  clear: both;
+}
+
 #menu {
   position: absolute;
   top: 0px;
@@ -19,7 +25,6 @@ body {
 
 #library {
   display: none;
-  height: 220px;
   background-color: #444;
   border-bottom: 4px #111 solid;
 }
